cart function added

--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -64,6 +64,6 @@
     transition: 0.2s ease-out;
 }
 .btn-cart:hover{
-    background-color: darkorange;
+    background-color: orange;
     color: white;
 }
