--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@600&family=Lato&family=Open+Sans:wght@500&family=Poppins:wght@500&display=swap');
 *{
   margin: 0%;
   padding: 0%;
+  font-family: 'Lato', sans-serif;
 }
